# provider-node

./: Cargo.toml  LICENSE  README.md  index.html  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml  test.yml
docs/: deployment.md  development.md  troubleshooting.md
scripts/: build.js  package.js  release.js
src-tauri/src/: lib.rs  main.rs
src/core/blockchain/: BlockchainService.ts  ContractInteraction.ts  WalletManager.ts
src/core/llm/: LLMAdapter.ts
src/core/llm/adapters/: AnthropicAdapter.ts  OpenAIAdapter.ts  SeedanceAdapter.ts
src/core/node/: NodeConfig.ts  NodeManager.ts  NodeStatus.ts
src/core/p2p/: DHTManager.ts  P2PService.ts  RelayManager.ts
src/core/proxy/: ProxyServer.ts  RequestHandler.ts  UsageTracker.ts
src/main/: app.ts  index.ts
src/main/config/: ConfigManager.ts  default.ts  schema.ts
src/renderer/: App.tsx
src/renderer/components/Dashboard/: Dashboard.tsx
src/renderer/components/Earnings/: Earnings.tsx
src/renderer/components/Settings/: Settings.tsx
src/renderer/stores/: appStore.ts
src/renderer/styles/: index.css
src/utils/: crypto.ts  logger.ts  validators.ts
test/unit/: validators.test.ts
